dark mode fix

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -647,7 +647,7 @@
 }
 
 .dark-mode .newsletterContainer p {
-	color: rgba(255, 255, 255, 0.5);
+	color: #8896ab;
 }
 
 .dark-mode .newsletterContainer span {
